# codesign

./: .gitignore  README.md
DISCO/: DISCO_完全初学者指南.md  DISCO_训练复现指南.md  DISCO_详细解读.md  README.md  pyproject.toml
DISCO/configs/: base.yaml  inference.yaml  train.yaml  train_conditional.yaml  train_enzyme.yaml  train_enzyme_full.yaml  train_enzyme_full_v2.yaml  train_enzyme_full_v3.yaml  train_enzyme_h100.yaml  train_prot2text.yaml
DISCO/configs/effort/: fast.yaml  max.yaml
DISCO/configs/experiment/: designable.yaml  diverse.yaml
DISCO/configs/fabric/: default.yaml
DISCO/configs/inference/: default.yaml
DISCO/configs/logger/: csv.yaml
DISCO/configs/model/: default.yaml
DISCO/configs/paths/: default.yaml
DISCO/configs/sequence_sampling_strategy/: default.yaml  path_planning.yaml
DISCO/configs/sequence_sampling_strategy/sequence_noise_scheduler/: cosine.yaml  polynomial.yaml  power_ratio.yaml
DISCO/configs/structure_encoder/: default.yaml
DISCO/configs/task_manager/: default.yaml
DISCO/disco/: __init__.py
DISCO/disco/model/: __init__.py  disco.py  losses.py  utils.py
DISCO/disco/model/cogen_inference/: cogen_generator.py  cogen_inference_loop_body_impl.py  cogen_inference_loop_strategies.py  feature_dict_updater.py  sequence_inference_noise_scheduler.py  sequence_sampling_strategy.py
DISCO/disco/model/layer_norm/: __init__.py  layer_norm.py  torch_ext_compile.py
DISCO/disco/model/modules/: diffusion.py  embedders.py  head.py  lmpnn.py  pairformer.py  plm.py  primitives.py  transformer.py
DISCO/disco/utils/: distributed.py  file_io.py  geometry.py  logger.py  metrics.py  np_utils.py  scatter_utils.py  seed.py  torch_utils.py
DISCO/disco/utils/seq/: amino_acid_constants.py  dna_constants.py  ligand_constants.py  res_constant.py  rna_constants.py
DISCO/input_jsons/: 6YMC_rna.json  7S03_dna.json  NDI.json  PLP.json  all_priorities_ligands_split_0.json  all_priorities_ligands_split_1.json  all_priorities_ligands_split_2.json  all_priorities_ligands_split_3.json  heme_b.json  thyroxine.json  unconditional_config.json  warfarin.json
DISCO/runner/: dumper.py  inference.py  pyproject.toml  train.py  utils.py
DISCO/scripts/: activate_env.sh  common_env.sh  doctor_env.sh  download_assets.sh  patch_cache_gt_seq.py  preprocess_chunk.py  preprocess_pdb_cache.py  restart_optimized.sh  run_inference.sh  setup_env.sh  train_disco.sh  train_prot2text.sh
EnzyGen2/: EnzyGen2_BEGINNER_COMPLETE_CN.md  README.md  check_enzygen2_data.sh  generate_AadA.sh  generate_ChlR.sh  generate_TPMT.sh  generate_enzygen2_pretrain.sh  generate_new_example.sh  install.sh  reah_AadA_finetune.sh  reah_ChlR_finetune.sh  reah_TPMT_finetune.sh  setup.py  train_EnzyGen2_full.sh  train_EnzyGen2_mlm.sh  train_EnzyGen2_motif.sh  train_enzygen2.sh
EnzyGen2/evaluation/: merge.py  prepare_esp_evaluation_finetune.py  prepare_esp_evaluation_pretrain.py
EnzyGen2/example/: 3DWZ.cif  5C8U.cif  example.json  prepare_example_data.py
EnzyGen2/fairseq/: __init__.py  checkpoint_utils.py  options.py  quantization_utils.py  trainer.py  version.py
EnzyGen2/fairseq/criterions/: __init__.py  (+2 more)
EnzyGen2/fairseq_cli/: finetune.py  generate.py  train.py
docs/: DISCO_v2_training_report.md  DISCO_训练全流程详解.md  RFD3_training_report.md  RFD3_训练全流程详解.md
scripts/: build_conditioned_csvs.py  build_dataset.py  build_enriched_base.py  build_training_subsets.py  compute_structure_features.py  download_prot2chat_missing_pdbs.py  enrich_layer3_llm.py  enzyme_design_planner.py  export_prot2text_rfd3_dataset.py  filter_enzymes_uniprot.py  generate_rfd3_subset_configs.py  generate_route_a_constraints.py  infer_prot2chat.py  infer_prottex.py  merge_enriched_layers.py  merge_layer3_into_constraints.py  monitor_training.py  query_enriched_db.py  run_agent_inference.py  run_enzyme_inference.py  split_prot2chat_dataset.py  train_prior.py  train_prot2chat_adapter.py  train_prottex_lora.py
(+15 files in other folders)
